--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "lodash": "4.17.21"
   },
   "devDependencies": {
+    "@babel/core": "7.17.9",
+    "@babel/preset-env": "7.16.11",
+    "babel-loader": "8.2.5",
+    "core-js": "3.22.2",
+    "html-webpack-plugin": "5.5.0",
     "webpack": "5.72.0",
     "webpack-cli": "4.9.2"
   }
