--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "webpack serve --open",
     "build": "webpack"
   },
   "keywords": [],
@@ -19,6 +20,7 @@
     "core-js": "3.22.2",
     "html-webpack-plugin": "5.5.0",
     "webpack": "5.72.0",
-    "webpack-cli": "4.9.2"
+    "webpack-cli": "4.9.2",
+    "webpack-dev-server": "4.8.1"
   }
 }
