--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
   "keywords": [],
   "author": "fancn21th <fancn21th@aliyun.com> (http://fancn21th.cn/)",
   "license": "MIT",
-  "dependencies": {
-    "lodash": "4.17.21"
-  },
   "devDependencies": {
     "@babel/core": "7.17.9",
     "@babel/preset-env": "7.16.11",
@@ -22,5 +19,8 @@
     "webpack": "5.72.0",
     "webpack-cli": "4.9.2",
     "webpack-dev-server": "4.8.1"
+  },
+  "dependencies": {
+    "angular": "1.2.32"
   }
 }
