--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@babel/core": "7.17.9",
     "@babel/preset-env": "7.16.11",
     "babel-loader": "8.2.5",
+    "css-loader": "6.7.1",
     "html-loader": "3.1.0",
     "html-webpack-plugin": "5.5.0",
+    "style-loader": "3.3.1",
     "webpack": "5.72.0",
     "webpack-cli": "4.9.2",
     "webpack-dev-server": "4.8.1"
